Send users to the wiki for info
Signed-off-by: Luis R. Rodriguez <lrodriguez@atheros.com>

--- a/README
+++ b/README
@@ -20,8 +20,9 @@ For more information on how to do this please refer the Developers section below
 Documenation
 ------------
 
-This package is also documented online and probably has more-up-to date
-information online than on this README file.
+This package is also documented online and has more-up-to date
+information online than on this README file. You should read the wiki page
+and not rely on this README:
 
 http://wireless.kernel.org/en/users/Download
 
