Typo fix on README
Signed-off-by: Luis R. Rodriguez <lrodriguez@atheros.com>

--- a/README
+++ b/README
@@ -17,7 +17,7 @@ http://wireless.kernel.org/en/developers/git-guide
 With a local git repository you can update the compatibility package yourself. 
 For more information on how to do this please refer the Developers section below.
 
-Documenation
+Documentation
 ------------
 
 This package is also documented online and has more-up-to date
