compat-wireless: add a set of pending patches for linux-wireless
We're in the merge window, so this adds all the patches pending
merge from Atheros. Note that these are not applied by default,
to apply then you must use the "-p" flag for ./scripts/admin-update.sh

Signed-off-by: Luis R. Rodriguez <lrodriguez@atheros.com>

--- a/linux-next-pending/README
+++ b/linux-next-pending/README
@@ -7,7 +7,8 @@ in this directory. The requirement is your patches must have
 been posted to a public mailing list for the subsystem you are
 working on. Each patch you add here must have a really good
 explanation on the top of the file which clarifies why the
-patch has not yet been merged.
+patch has not yet been merged OR specify it on the commit log
+when you add it on compat-wireless.
 
 We try to avoid having patch files because but we understand
 if you might because you need to test code posted but not yet
