--- a/linux-next-cherry-picks/README
+++ b/linux-next-cherry-picks/README
@@ -14,3 +14,7 @@ releases.
 The larger the number of patches you see in this directory
 the more we should be ashamed. We should strive to reduce this
 to 0 all the time.
+
+This directory will always be empty for bleeding edge
+releases as bleeding edge releases are always based on
+linux-next already.
