compat-wireless: update some urls to git trees in docs
Changes some references to compat and compat-wireless git tree hosted
at git.kernel.org to github and changed some references from wireless-
testing to linux-next and linux-2.6-allstable to linux-stable.

Signed-off-by: Hauke Mehrtens <hauke@hauke-m.de>
Signed-off-by: Luis R. Rodriguez <mcgrof@frijolero.org>

--- a/README
+++ b/README
@@ -302,8 +302,8 @@ compatibility. You will then need to checkout three trees to start hacking on
 compat-wireless:
 
 git://git.kernel.org/pub/scm/linux/kernel/git/next/linux-next.git
-git://git.kernel.org/pub/scm/linux/kernel/git/mcgrof/compat.git
-git://git.kernel.org/pub/scm/linux/kernel/git/mcgrof/compat-wireless-2.6.git
+git://github.com/mcgrof/compat.git
+git://github.com/mcgrof/compat-wireless.git
 
 Linux next
 ----------
