--- a/crap/README
+++ b/crap/README
@@ -1,5 +1,5 @@
 
-compat-wireless crap patches
+compat-drivers crap patches
 ============================
 
 If you are including patches into this directory you
