--- a/linux-next-cherry-picks/README
+++ b/linux-next-cherry-picks/README
@@ -1,5 +1,5 @@
-compat-wireless linux-next chery picked patches
-===============================================
+compat-drivers linux-next chery picked patches
+==============================================
 
 We work hard to get patches in time onto the stable
 tree but sometimes a few things slip out, and sometimes a
