--- a/linux-next-pending/README
+++ b/linux-next-pending/README
@@ -1,5 +1,5 @@
 
-compat-wireless linux-next-pending patches
+compat-drivers linux-next-pending patches
 ==========================================
 
 You must have a really good reason to be adding files
@@ -8,7 +8,7 @@ been posted to a public mailing list for the subsystem you are
 working on. Each patch you add here must have a really good
 explanation on the top of the file which clarifies why the
 patch has not yet been merged OR specify it on the commit log
-when you add it on compat-wireless.
+when you add it on compat-drivers.
 
 We try to avoid having patch files because but we understand
 if you might because you need to test code posted but not yet
